--- a/main.html
+++ b/main.html
@@ -8,6 +8,47 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	  <div class="blog-container">
+    <div class="column">
+      <h2>News</h2>
+      <ul>
+        <li>Article 1</li>
+        <li>Article 2</li>
+        <li>Article 3</li>
+      </ul>
+    </div>
+    <div class="column">
+      <h2>Reviews</h2>
+      <ul>
+        <li>Article 4</li>
+        <li>Article 5</li>
+        <li>Article 6</li>
+        <li>Article 6</li>
+        <li>Article 6</li>
+		  
+      </ul>
+    </div>
+    <div class="column">
+      <h2>Tips & Tricks</h2>
+      <ul>
+        <li>Article 6</li>
+        <li>Article 6</li>
+        <li>Article 6</li>
+        <li>Article 6</li>
+        <li>Article 6</li>
+		
+      </ul>
+    </div>
+    <div class="column">
+      <h2>Interviews</h2>
+      <ul>
+        <li>Article 7</li>
+        <li>Article 8</li>
+        <li>Article 9</li>
+		<li>Article 10</li>
+      </ul>
+    </div>
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
