--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	  <div class="blog-container">
-    <div class="column">
+    <div class="blog-column">
       <h2>News</h2>
       <ul>
         <li>Article 1</li>
